--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,31 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  lint-and-test:
-    runs-on: windows-latest
-    strategy:
-      matrix:
-        python-version: [3.8, 3.9, "3.10", 3.11]
-    
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    
-    - name: Run application test
-      run: |
-        python vrcft_tray_guard.py --help || echo "Application can be imported successfully"
-
-  build-executable:
-    needs: lint-and-test
+  build:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v4
@@ -58,7 +34,7 @@ jobs:
         if-no-files-found: error
 
   release:
-    needs: build-executable
+    needs: build
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     
@@ -74,6 +50,6 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       with:
         files: |
-          dist/vrcft_tray_guard.exe
+          dist/*.exe
         draft: true
         prerelease: true
