chore(workflow): 更新构建工作流配置
- 添加了 contents: write 和 packages: read 权限
- 移除了 release 作业的条件判断逻辑
- 修改了发布配置，设置预发布版本
- 更新了发布标签为 pre-release
- 设置发布状态为非草稿模式
- 保留了预发布标记功能

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,9 @@
 name: CI/CD Pipeline
 
+permissions:
+  contents: write
+  packages: read
+
 on:
   push:
     branches: [ main ]
@@ -32,24 +36,16 @@ jobs:
         name: vrcft-tray-guard-executable
         path: dist/
         if-no-files-found: error
-
-  release:
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    
-    steps:
-    - name: Download artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: vrcft-tray-guard-executable
-        path: dist/
-    
     - name: Create Release
       uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
       with:
+        tag_name: pre-release
+        name: "Pre-release Build"
+        body: |
+          Automated pre-release build
+          Commit: ${{ github.sha }}
+          Built on: $(date -u)
         files: |
           dist/*.exe
-        draft: true
+        draft: false
         prerelease: true
